CustomObjects/objects/invoiceit_s__Usage_Mediation__c.object
<CustomObject>
    <fields>
        <fullName>invoiceit_s__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Usage Mediations</relationshipLabel>
        <relationshipName>Usage_Mediations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__AppliedUnitPrice__c</fullName>
        <label>Applied Unit Price</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__BilledQuantity__c</fullName>
        <label>Billed Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__GroupedQuantity__c</fullName>
        <label>Grouped Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__InvoiceLineIds__c</fullName>
        <description>This is system generated field which will hold the Invoice Line Ids</description>
        <inlineHelpText>This is system generated field which will hold the Invoice Line Ids</inlineHelpText>
        <label>Invoice Line Ids</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__MediationEndDate__c</fullName>
        <label>Mediation End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__MediationStartDate__c</fullName>
        <label>Mediation Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__OrderRatePlanCharge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Rate Plan Charge</label>
        <referenceTo>invoiceit_s__Job_Rate_Plan_Charge__c</referenceTo>
        <relationshipLabel>Usage Mediations</relationshipLabel>
        <relationshipName>UsageMediationsORPC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>invoiceit_s__Job__c</referenceTo>
        <relationshipLabel>Usage Mediations</relationshipLabel>
        <relationshipName>UsageMediationsOrder</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__ServiceGroupId__c</fullName>
        <description>This will hold the system generated value for Mediation Start Date, Mediation End Date and GroupId</description>
        <externalId>true</externalId>
        <inlineHelpText>This will hold the system generated value for Mediation Start Date, Mediation End Date and GroupId</inlineHelpText>
        <label>Service GroupId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Un-Billed</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Billed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__TotalQuantity__c</fullName>
        <label>Total Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__UnbilledQuantity__c</fullName>
        <label>Unbilled Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Usage Mediation</label>
    <listViews>
        <fullName>invoiceit_s__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>UM-{0000000000}</displayFormat>
        <label>Usage Mediation #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Usage Mediations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>